--- a/STL Start/STL Start/STL Start.vcxproj
+++ b/STL Start/STL Start/STL Start.vcxproj
@@ -144,7 +144,10 @@
   <ItemGroup>
     <ClCompile Include="save.cpp" />
     <ClCompile Include="STRING.cpp" />
-    <ClCompile Include="소스.cpp" />
+    <ClCompile Include="소스 - 시험.cpp" />
+    <ClCompile Include="소스.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="save.h" />
