--- a/STL Start/STL Start/STL Start.vcxproj.filters
+++ b/STL Start/STL Start/STL Start.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="STRING.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="소스 - 시험.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="save.h">
